--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>I Love Baking </title>
+      <!-- Write comments in this-->
    </head>
    <body>
       <!-- Write your HTML in this file! -->
