--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>I Love Baking </title>
-      <!-- Write comments in this-->
+      <title>Tiffany's Favorite Foods</title>
    </head>
    <body>
       <!-- Write your HTML in this file! -->
+      <header>
+         <h1>Tiffany's Favorite Foods</h1>
+      </header>
+      <main>
+         <h2>Sushi</h2>
+         <h2>Mashed Potatoes</h2>
+         <h2>S'mores</h2>
+      </main>      
+      
+      <footer>2023 Tiffany Azalea</footer>
    </body>
 </html>
