Added some text to Sushi

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       </header>
       <main>
          <h2>Sushi</h2>
+         <p>Sushi is so delicious! The best part about sushi is the many different varieties it comes in. A few of my Favorite
+            sushi rolls are the Eel roll, Philadelphia roll, Shrimp tempura
+         
+         </p>
          <h2>Mashed Potatoes</h2>
          <h2>S'mores</h2>
       </main>      
