--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
       </header>
       <main>
          <article>
-            <h2>Sushi</h2>
-            <p>Sushi is so delicious! The best part about sushi is the many different varieties it comes in. A few of my Favorite
-            sushi rolls are the Eel roll, Philadelphia roll, Shrimp tempura
-         
-            </p>
-            <h2>Mashed Potatoes</h2>
-            <p>Mashed potatoes are so . Cheddar, garlic, red potato...You name it!</p>
-            <h2>S'mores</h2>
-            <p>Would I like some dessert? Yes please! S’mores will always be the perfect dessert to me. 
-            In fact, anything s’mores flavored anything is an automatic thumbs up. I love s’more so much that I even had a s’mores maker at one point.</p>
+            <section>
+               <h2>Sushi</h2>
+               <p>Sushi is so delicious! The best part about sushi is the many different varieties it comes in. A few of my Favorite
+                  sushi rolls are the Eel roll, Philadelphia roll, Shrimp tempura
+               </p>
+            </section>
+            <section>
+               <h2>Mashed Potatoes</h2>
+               <p>Mashed potatoes are so . Cheddar, garlic, red potato...You name it!</p>
+            </section>
+            <section>               
+               <h2>S'mores</h2>
+               <p>Would I like some dessert? Yes please! S’mores will always be the perfect dessert to me. 
+                  In fact, anything s’mores flavored anything is an automatic thumbs up. I love s’more so much that I even had a s’mores maker at one point.</p>
+            </section>
          </article>
        </main>      
       
