started style css file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>Tiffany's Favorite Foods</title>
+      <link rel="stylesheet" type="text/css" href="styles.css">
    </head>
    <body>
       <!-- Write your HTML in this file! -->
@@ -12,18 +13,18 @@
          <article>
             <section>
                <h2>Sushi</h2>
-               <p>Sushi is so delicious! The best part about sushi is the many different varieties it comes in. A few of my Favorite
-                  sushi rolls are the Eel roll, Philadelphia roll, Shrimp tempura
+               <p>Sushi is so delicious! The best part about sushi is the many different varieties it comes in. A few of my favorite
+                  sushi rolls are eel rolls, Philadelphia rolls, and shrimp tempura rolls.
                </p>
             </section>
             <section>
                <h2>Mashed Potatoes</h2>
-               <p>Mashed potatoes are so . Cheddar, garlic, red potato...You name it!</p>
+               <p>Mashed potatoes are so simple, yet so good. Cheddar, garlic, red potato...You name it! They are all my favorites.</p>
             </section>
             <section>               
                <h2>S'mores</h2>
                <p>Would I like some dessert? Yes please! S’mores will always be the perfect dessert to me. 
-                  In fact, anything s’mores flavored anything is an automatic thumbs up. I love s’more so much that I even had a s’mores maker at one point.</p>
+                  In fact, anything s’mores flavored is an automatic thumbs up. I love s’mores so much that I even have a s'more maker.</p>
             </section>
          </article>
        </main>      
