Completed Assignment #4 basic.

--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
    <body>
       <!-- Write your HTML in this file! -->
       <header>
-         <h1>Tiffany's Favorite Foods</h1>
+         <h1 class="center-header" id="mainHeading">Tiffany's Favorite Foods</h1>
       </header>
       <main>
          <article>
             <section>
-               <h2>Sushi</h2>
-               <p>Sushi is so delicious! The best part about sushi is the many different varieties it comes in. A few of my favorite
+               <h2 class="center-header">Sushi</h2>
+               <img src="images/Philadelphia-Roll-31.jpg" />
+               <p>Sushi is so delicious! The best part about sushi is the many varieties it comes in. A few of my favorite
                   sushi rolls are eel rolls, Philadelphia rolls, and shrimp tempura rolls.
                </p>
             </section>
             <section>
-               <h2>Mashed Potatoes</h2>
-               <p>Mashed potatoes are so simple, yet so good. Cheddar, garlic, red potato...You name it! They are all my favorites.</p>
+               <h2 class="center-header">Mashed Potatoes</h2>
+               <img src="images/delish-mashed-potatoes-021-1541716941.jpg" />
+               <p>Mashed potatoes are so simple, yet so good. Cheesy, roasted garlic, buttermilk...You name it! They are all my favorites.</p>
             </section>
-            <section>               
-               <h2>S'mores</h2>
-               <p>Would I like some dessert? Yes please! S’mores will always be the perfect dessert to me. 
+            <section>     
+               <h2 class="center-header">S'mores</h2>
+               <img src="images/il_794xN.5124791053_50hs.webp" />          
+               <p id="testP" class="funParagraph">Would I like some dessert? Yes please! S’mores will always be the perfect dessert to me. 
                   In fact, anything s’mores flavored is an automatic thumbs up. I love s’mores so much that I even have a s'more maker.</p>
             </section>
          </article>
